--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
